2010-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1661/testing
	* spfifo02/init.c, spmountmgr01/init.c, spprivenv01/init.c: Eliminate
	most references to RTEMS_Malloc_Heap.

2010-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sp09/screen12.c: Update for rtems_region_create() changes.
	* sp09/sp09.scn: Update.

2010-08-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1647/testing
	* spsize/size.c: Remove redundant initialize uninitialized to 0.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* spsize/size.c: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.

2010-07-29	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1621/testing
	* Makefile.am, configure.ac: Improve coverage of private environment.
	* spprivenv01/.cvsignore, spprivenv01/Makefile.am, spprivenv01/init.c,
	spprivenv01/spprivenv01.doc, spprivenv01/spprivenv01.scn: New files.

2010-07-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sp43/init.c, sp43/sp43.scn: Add code to exercise case where an API
	pointer is NULL when getting an object name.

2010-07-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sp11/sp11.scn, sp11/task1.c: Add test case for receiving all events
	no wait but the condition is only partially satisfied.

2010-07-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test to extract a task blocked with
	timeout on a priority ordered thread queue.
	* sp72/.cvsignore, sp72/Makefile.am, sp72/init.c, sp72/sp72.doc,
	sp72/sp72.scn: New files.

2010-07-16	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* spmountmgr01/init.c, spmountmgr01/spmountmgr01.scn,
	spmountmgr01/spmountmgr01.doc: Added cases to exercise
	mount-mktgt.c.

2010-07-15	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* spmountmgr01/init.c, spmountmgr01/Makefile.am,
	spmountmgr/.cvsignore, spmountmgr01/spmountmgr01.doc,
	spmountmgr01/spmountmgr01.scn: New test which improves coverage