@@ -1,3 +1,9 @@
+2010-08-10	Bharath Suri <bharath.s.jois@gmail.com>
+
+	PR 1663/testing
+	* spmkdir/init.c: New cases to get the error path in rtems_mkdir
+	routine.
+
 2010-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	PR 1661/testing
